--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-body {
-	width: 960px;
+canvas {
+	padding-left: 0;
+	padding-right: 0;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
 	margin: 0 auto;
 }
